--- a/donate.html
+++ b/donate.html
@@ -1,188 +1,114 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
-    <meta charset="utf-8">
-    <title>บริจาค|มูลนิธิ ฟีนิกซ์ ฟอร์ ไลฟท์ |Phoenix for life</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <meta content="มูลนิธิ ฟีนิกซ์ ฟอร์ ไลฟท์,Phoenixforlife,ช่วยเหลือเด็กกำพร้าและผู้ยากไร้" name="keywords">
-    <meta content="มูลนิธิ ฟีนิกซ์ ฟอร์ ไลฟท์ |Phoenixforlife ช่วยเหลือเด็กกำพร้าและผู้ยากไร้" name="description">
-
-    <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
-
-    <!-- Google Web Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href='https://fonts.googleapis.com/css?family=Kanit' rel='stylesheet'>
-
-    <!-- Icon Font Stylesheet -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
-
-    <!-- Libraries Stylesheet -->
-    <link href="lib/animate/animate.min.css" rel="stylesheet">
-    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-    <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
-
-    <!-- Customized Bootstrap Stylesheet -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Template Stylesheet -->
-    <link href="css/style.css" rel="stylesheet">
+<meta charset="utf-8">
+<title>บริจาค|มูลนิธิ ฟีนิกซ์ ฟอร์ ไลฟท์ |Phoenix for life</title>
+<meta content="width=device-width, initial-scale=1.0" name="viewport">
+<meta content="มูลนิธิ ฟีนิกซ์ ฟอร์ ไลฟท์ |Phoenixforlife ช่วยเหลือเด็กกำพร้าและผู้ยากไร้" name="description">
+<link href="img/favicon.ico" rel="icon">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href='https://fonts.googleapis.com/css?family=Kanit' rel='stylesheet'>
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
+<link href="lib/animate/animate.min.css" rel="stylesheet">
+<link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+<link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
-    <!-- Spinner Start -->
-    <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
-        <div class="spinner-grow" style="width: 3rem; height: 3rem;background: linear-gradient(to right, #c02425, #f0cb35);" role="status">
-            <span class="sr-only">Loading...</span>
-        </div>
+<div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+  <div class="spinner-grow" style="width: 3rem; height: 3rem;background: linear-gradient(to right, #c02425, #f0cb35);" role="status"> <span class="sr-only">Loading...</span> </div>
+</div>
+<div class="container-fluid bg-light p-0 wow fadeIn" data-wow-delay="0.1s">
+  <div class="row gx-0 d-none d-lg-flex">
+    <div class="col-lg-7 px-5 text-start">
+      <div class="h-100 d-inline-flex align-items-center py-3 me-4"style= "color: #070707;"> <small class="fa fa-map-marker-alt me-2"></small> <small>เลขที่139 หมู่1,ตำบลสนับทึบ อำเภอวังน้อย จังหวัดพระนครศรีอยุธยา 13170, ประเทศไทย</small> </div>
+      <div class="h-100 d-inline-flex align-items-center py-3"style= "color: #070707;"> <small class="far fa-clock me-2"></small> <small>จันทร์ - ศุกร์ : 09.00 น.- 16.00 น.</small> </div>
     </div>
-    <!-- Spinner End -->
-
-    <!-- Topbar Start -->
-    <div class="container-fluid bg-light p-0 wow fadeIn" data-wow-delay="0.1s">
-        <div class="row gx-0 d-none d-lg-flex">
-            <div class="col-lg-7 px-5 text-start">
-                <div class="h-100 d-inline-flex align-items-center py-3 me-4"style= "color: #070707;">
-                    <small class="fa fa-map-marker-alt me-2"></small>
-                    <small>เลขที่139 หมู่1,ตำบลสนับทึบ อำเภอวังน้อย จังหวัดพระนครศรีอยุธยา 13170, ประเทศไทย</small>
-                </div>
-                <div class="h-100 d-inline-flex align-items-center py-3"style= "color: #070707;">
-                    <small class="far fa-clock me-2"></small>
-                    <small>จันทร์ - ศุกร์ : 09.00 น.- 16.00 น.</small>
-                </div>
-            </div>
-            <div class="col-lg-5 px-5 text-end"style= "color: #070707;">
-                <div class="h-100 d-inline-flex align-items-center py-3 me-4">
-                    <small class="fa fa-phone-alt me-2"></small>
-                    <small>+06-5145-3994</small>
-                </div>
-                <div class="h-100 d-inline-flex align-items-center py-3 me-4">
-                    <small class="fa fa-envelope me-3"></small>
-                    <small>phoenixforlife.foundation@gmail.com</small>
-                </div>
-                <div class="h-100 d-inline-flex align-items-center">
-                    <a class="btn btn-sm-square rounded-circle bg-white me-1" href=""><i class="fab fa-facebook-f"style= "color: #070707;"></i></a>
-                    <a class="btn btn-sm-square rounded-circle bg-white  me-1" href=""><i class="fab fa-youtube"style= "color: #070707;"></i></a>
-                </div>
-            </div>
-        </div>
+    <div class="col-lg-5 px-5 text-end"style= "color: #070707;">
+      <div class="h-100 d-inline-flex align-items-center py-3 me-4"> <small class="fa fa-phone-alt me-2"></small> <small>+06-5145-3994</small> </div>
+      <div class="h-100 d-inline-flex align-items-center py-3 me-4"> <small class="fa fa-envelope me-3"></small> <small>phoenixforlife.foundation@gmail.com</small> </div>
+      <div class="h-100 d-inline-flex align-items-center"> <a class="btn btn-sm-square rounded-circle bg-white me-1" href=""><i class="fab fa-facebook-f"style= "color: #070707;"></i></a> <a class="btn btn-sm-square rounded-circle bg-white  me-1" href=""><i class="fab fa-youtube"style= "color: #070707;"></i></a> </div>
     </div>
-    <!-- Topbar End -->
-
-       <!-- Navbar Start -->
-       <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s">
-        <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <h1 class="m-0"style= "font-family: 'Kanit';color: #070707;"><img src="img/logo.webp" alt="" style="height: 200px ;width: 200px;"></i>มูลนิธิ ฟีนิกซ์ ฟอร์ ไลฟท์</h1>
-        </a>
-        <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
-            <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link active">หน้าหลัก</a>
-                <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">เกี่ยวกับเรา</a>
-                    <div class="dropdown-menu rounded-0 rounded-bottom m-0">
-                        <a href="about.html" class="dropdown-item">เกี่ยวกับมูลนิธิของเรา</a>
-                        <a href="team.html" class="dropdown-item">อาสาสมัคร</a>
-                    </div>
-                </div>
-                <a href="service.html" class="nav-item nav-link">โครงการของเรา</a>
-                <a href="donate.html" class="nav-item nav-link">บริจาค</a>
-                <a href="blog.html" class="nav-item nav-link">ข่าวสาร</a>
-                <a href="contact.html" class="nav-item nav-link">ติดต่อเรา</a>
-            </div>
-        </div>
+  </div>
+</div>
+<nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top p-0 wow fadeIn" data-wow-delay="0.1s"> <a href="index.html" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
+  <h1 class="m-0"style= "font-family: 'Kanit';color: #070707;"><img src="img/logo.webp" alt="" style="height: 200px ;width: 200px;"></i>มูลนิธิ ฟีนิกซ์ ฟอร์ ไลฟท์</h1>
+  </a>
+  <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"> </button>
+  <div class="collapse navbar-collapse" id="navbarCollapse">
+    <div class="navbar-nav ms-auto p-4 p-lg-0"> <a href="index.html" class="nav-item nav-link active">หน้าหลัก</a>
+      <div class="nav-item dropdown"> <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">เกี่ยวกับเรา</a>
+        <div class="dropdown-menu rounded-0 rounded-bottom m-0"> <a href="about.html" class="dropdown-item">เกี่ยวกับมูลนิธิของเรา</a> <a href="team.html" class="dropdown-item">อาสาสมัคร</a> </div>
+      </div>
+      <a href="service.html" class="nav-item nav-link">โครงการของเรา</a> <a href="donate.html" class="nav-item nav-link">บริจาค</a> <a href="blog.html" class="nav-item nav-link">ข่าวสาร</a> <a href="contact.html" class="nav-item nav-link">ติดต่อเรา</a> </div>
+  </div>
+</nav>
+<div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
+  <div class="container py-5">
+    <h1 class="display-3 text-white mb-3 animated slideInDown"style= "font-family: 'Kanit';">บริจาคช่วยสมทบทุนโครงการ</h1>
+    <nav aria-label="breadcrumb animated slideInDown">
+      <ol class="breadcrumb text-uppercase mb-0">
+        <li class="breadcrumb-item"><a class="text-white" href="#">หน้าหลัก</a></li>
+        <li class="breadcrumb-item"><a class="text-white" href="#">หน้า</a></li>
+        <li class="breadcrumb-item text-white active" aria-current="page">บริจาค</li>
+      </ol>
     </nav>
-    <!-- Navbar End -->
-
-    <!-- Page Header Start -->
-    <div class="container-fluid page-header py-5 mb-5 wow fadeIn" data-wow-delay="0.1s">
-        <div class="container py-5">
-            <h1 class="display-3 text-white mb-3 animated slideInDown"style= "font-family: 'Kanit';">บริจาคช่วยสมทบทุนโครงการ</h1>
-            <nav aria-label="breadcrumb animated slideInDown">
-                <ol class="breadcrumb text-uppercase mb-0">
-                    <li class="breadcrumb-item"><a class="text-white" href="#">หน้าหลัก</a></li>
-                    <li class="breadcrumb-item"><a class="text-white" href="#">หน้า</a></li>
-                    <li class="breadcrumb-item text-white active" aria-current="page">บริจาค</li>
-                </ol>
-            </nav>
-        </div>
+  </div>
+</div>
+<div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
+  <div class="container text-center">
+    <div class="row justify-content-center">
+      <div class="col-lg-6"> <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
+        <h1 class="display-1">404</h1>
+        <h1 class="mb-4">Page Not Found</h1>
+        <p class="mb-4">We’re sorry, the page you have looked for does not exist in our website! Maybe go to our home page or try to use a search?</p>
+        <a class="btn btn-primary rounded-pill py-3 px-5" href="">Go Back To Home</a> </div>
     </div>
-    <!-- Page Header End -->
-
-    <!-- 404 Start -->
-    <div class="container-xxl py-5 wow fadeInUp" data-wow-delay="0.1s">
-        <div class="container text-center">
-            <div class="row justify-content-center">
-                <div class="col-lg-6">
-                    <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
-                    <h1 class="display-1">404</h1>
-                    <h1 class="mb-4">Page Not Found</h1>
-                    <p class="mb-4">We’re sorry, the page you have looked for does not exist in our website! Maybe go to our home page or try to use a search?</p>
-                    <a class="btn btn-primary rounded-pill py-3 px-5" href="">Go Back To Home</a>
-                </div>
-            </div>
+  </div>
+</div>
+<div class="container-fluid  text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s"style="background: linear-gradient(to right, #c02425, #f0cb35);">
+  <div class="container py-5">
+    <div class="row g-5">
+      <div class="col-lg-3 col-md-6">
+        <h5 class="mb-4"style= "font-family: 'Kanit';color: #050505;">ที่ตั้งมูลนิธิ</h5>
+        <p class="mb-2"style= "color: #050505;"><i class="fa fa-map-marker-alt me-3"></i>พระนครศรีอยุธยา, ประเทศไทย</p>
+        <p class="mb-2"style= "color: #050505;"><i class="fa fa-phone-alt me-3"></i>+063-849-3429</p>
+        <p class="mb-2" style= "color: #050505;"><i class="fa fa-envelope me-3"></i>@mail.com</p>
+        <div class="d-flex pt-2"> <a class="btn btn-outline-light btn-social rounded-circle" href=""><i class="fab fa-facebook-f"></i></a> <a class="btn btn-outline-light btn-social rounded-circle" href=""><i class="fab fa-youtube"></i></a> </div>
+      </div>
+      <div class="col-lg-3 col-md-6">
+        <h5 class=" mb-4"style= "font-family: 'Kanit';color: #050505;">ติดตามข่าวสารโครงการของเรา</h5>
+        <p style= "color: #050505;">สนใจรับข่าวสารโครงการมูลนิธิของเราผ่านอีเมล์.</p>
+        <div class="position-relative mx-auto" style="max-width: 400px;">
+          <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="อีเมล์ของคุณ...">
+          <button type="button" class="btn  py-2 position-absolute top-0 end-0 mt-2 me-2"style= "color: #070707; background: linear-gradient(to right, #c02425, #f0cb35);">สมัครเลย</button>
         </div>
+      </div>
     </div>
-    <!-- 404 End -->
-        
-    <!-- Footer Start -->
-    <div class="container-fluid  text-light footer mt-5 pt-5 wow fadeIn" data-wow-delay="0.1s"style="background: linear-gradient(to right, #c02425, #f0cb35);">
-        <div class="container py-5">
-            <div class="row g-5">
-                <div class="col-lg-3 col-md-6">
-                    <h5 class="mb-4"style= "font-family: 'Kanit';color: #050505;">ที่ตั้งมูลนิธิ</h5>
-                    <p class="mb-2"style= "color: #050505;"><i class="fa fa-map-marker-alt me-3"></i>พระนครศรีอยุธยา, ประเทศไทย</p>
-                    <p class="mb-2"style= "color: #050505;"><i class="fa fa-phone-alt me-3"></i>+063-849-3429</p>
-                    <p class="mb-2" style= "color: #050505;"><i class="fa fa-envelope me-3"></i>@mail.com</p>
-                    <div class="d-flex pt-2">
-                        <a class="btn btn-outline-light btn-social rounded-circle" href=""><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-outline-light btn-social rounded-circle" href=""><i class="fab fa-youtube"></i></a>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6">
-                    <h5 class=" mb-4"style= "font-family: 'Kanit';color: #050505;">ติดตามข่าวสารโครงการของเรา</h5>
-                    <p style= "color: #050505;">สนใจรับข่าวสารโครงการมูลนิธิของเราผ่านอีเมล์.</p>
-                    <div class="position-relative mx-auto" style="max-width: 400px;">
-                        <input class="form-control border-0 w-100 py-3 ps-4 pe-5" type="text" placeholder="อีเมล์ของคุณ...">
-                        <button type="button" class="btn  py-2 position-absolute top-0 end-0 mt-2 me-2"style= "color: #070707; background: linear-gradient(to right, #c02425, #f0cb35);">สมัครเลย</button>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="copyright">
-                <div class="row">
-                    <div class="col-md-6 text-center text-md-start mb-3 mb-md-0" style= "color: #050505;">
-                        &copy; <a class="border-bottom" style= "color: #050505;" href="#">PHOENIX FOR LIFE</a>, All Right Reserved.
-                    </div>
-                </div>
-            </div>
-        </div>
+  </div>
+  <div class="container">
+    <div class="copyright">
+      <div class="row">
+        <div class="col-md-6 text-center text-md-start mb-3 mb-md-0" style= "color: #050505;"> &copy; <a class="border-bottom" style= "color: #050505;" href="#">PHOENIX FOR LIFE</a>, All Right Reserved. </div>
+      </div>
     </div>
-    <!-- Footer End -->
-
-    <!-- Back to Top -->
-    <a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
-
-    <!-- JavaScript Libraries -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="lib/wow/wow.min.js"></script>
-    <script src="lib/easing/easing.min.js"></script>
-    <script src="lib/waypoints/waypoints.min.js"></script>
-    <script src="lib/counterup/counterup.min.js"></script>
-    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
-    <script src="lib/tempusdominus/js/moment.min.js"></script>
-    <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
-    <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
-
-    <!-- Template Javascript -->
-    <script src="js/main.js"></script>
+  </div>
+</div>
+<a href="#" class="btn btn-lg btn-primary btn-lg-square rounded-circle back-to-top"><i class="bi bi-arrow-up"></i></a>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+<script src="lib/wow/wow.min.js"></script>
+<script src="lib/easing/easing.min.js"></script>
+<script src="lib/waypoints/waypoints.min.js"></script>
+<script src="lib/counterup/counterup.min.js"></script>
+<script src="lib/owlcarousel/owl.carousel.min.js"></script>
+<script src="lib/tempusdominus/js/moment.min.js"></script>
+<script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
+<script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+<script src="js/main.js"></script>
 </body>
-
 </html>
